syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option objc_class_prefix = "HLW";

package sd.oficina.shared.proto.customer;

// FABRICANTE
message FabricanteProto {
    int64 id = 1;
    string nome = 2;
}

message FabricanteProtoList {
    repeated FabricanteProto fabricantes = 1;
}

message FabricanteResult {
    FabricanteProto fabricante = 1;
    int64 codigo = 2;
}

// MODELO
message ModeloProto {
    int64 id = 1;
    string nome = 2;
    string tipo = 3;
    FabricanteProto fabricante = 4;
}

message ModeloProtoList {
    repeated ModeloProto modelos = 1;
}

message ModeloResult {
    ModeloProto modelo = 1;
    int64 codigo = 2;
}

// COR
message CorProto {
    int64 id = 1;
    string nome = 2;
}

message CorProtoResult{
    CorProto cor = 1;
    int64 codigo = 2;
}

// VEICULO
message VeiculoProto {
    int64 id = 1;
    string placa = 2;
    double quilometragem = 3;
    CorProto cor = 4;
    ModeloProto modelo = 5;
}

message VeiculoProtoList {
    repeated VeiculoProto veiculos = 1;
}

message VeiculoResult {
    int64 codigo = 1;
    VeiculoProto veiculo = 2;
}


// ANOMODELO
message AnoModeloProto {
    int64 id = 1;
    string nome = 2;
    string tipo = 3;
    double valor = 4;
    ModeloProto modelo = 5;
}

message AnoModeloProtoList{
    repeated AnoModeloProto anoModelos = 1;
}

message AnoModeloResult{
    AnoModeloProto anoModelo = 1;
    int64 codigo = 2;
}


service FabricanteService {
    rpc buscarTodos (google.protobuf.Empty) returns (FabricanteProtoList);
    rpc salvar (FabricanteProto) returns (FabricanteResult);
    rpc atualizar (FabricanteProto) returns (FabricanteResult);
    rpc deletar (FabricanteProto) returns (FabricanteResult);
    rpc buscar (FabricanteProto) returns (FabricanteResult);
}

service VeiculoService {
    rpc buscarTodos (google.protobuf.Empty) returns (VeiculoProtoList);
    rpc salvar (VeiculoProto) returns (VeiculoResult);
    rpc atualizar (VeiculoProto) returns (VeiculoResult);
    rpc deletar (VeiculoProto) returns (VeiculoResult);
    rpc buscar (VeiculoProto) returns (VeiculoResult);
}

service ModeloService {
    rpc buscarTodos (google.protobuf.Empty) returns (ModeloProtoList);
    rpc salvar (ModeloProto) returns (ModeloResult);
    rpc atualizar (ModeloProto) returns (ModeloResult);
    rpc deletar (ModeloProto) returns (ModeloResult);
    rpc buscar (ModeloProto) returns (ModeloResult);
}

service AnoModeloService {
    rpc buscarTodos (google.protobuf.Empty) returns (AnoModeloProtoList);
    rpc salvar (AnoModeloProto) returns (AnoModeloResult);
    rpc atualizar (AnoModeloProto) returns (AnoModeloResult);
    rpc deletar (AnoModeloProto) returns (AnoModeloResult);
    rpc buscar (AnoModeloProto) returns (AnoModeloResult);
}